@@ -1,1 +1,5 @@
 # csgo-aimbot
+
+Main类启动是，添加jvm参数，其中opencv路径自行修改
+
+--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED --add-opens=java.desktop/sun.awt=ALL-UNNAMED --add-opens=jdk.incubator.foreign/jdk.internal.foreign=ALL-UNNAMED --add-modules=jdk.incubator.foreign --enable-native-access=ALL-UNNAMED -Djava.library.path=D:\kaifa_environment\opencv\opencv_all_build\java\opencv452;
